# copilotfeedback

./: .gitignore  DESIGN.md  LICENSE  README.md  example.py  pyproject.toml
src/copilotfeedback/: __init__.py  app.py  models.py  output.py  parser.py
