[project]
name = "copilotfeedback"
version = "0.1.0"
description = "A TUI for reviewing git diffs and providing feedback to coding agents"
readme = "README.md"
authors = [
    { name = "Sam Betts", email = "1769706+Tehsmash@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=6.11.0",
]

[project.scripts]
copilotfeedback = "copilotfeedback:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
